<resources>
    <!-- Общие элементы -->
    <string name="app_name" translatable="false">VolunteerFind</string>
    <string name="common_unknown">Unknown</string>
    <string name="common_next">Next</string>
    <string name="common_edit">Edit</string>
    <string name="common_close">Close</string>
    <string name="common_refresh">Refresh</string>
    <string name="common_find">Find</string>
    <string name="common_welcome">Welcome!</string>
    <string name="common_hello">Hello!</string>

    <!-- Навигация -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_centers">Centers</string>

    <!-- Экран старта -->
    <string name="start_title">Become a volunteer</string>
    <string name="start_subtitle">Choose your center</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>

    <!-- Общий список -->
    <string name="item_name">Name</string>
    <string name="item_description">Description</string>
    <string name="item_coordinates">Distance</string>


    <string name="menu_main">Home</string>
    <string name="menu_profile">Distance</string>

    <!-- Авторизация -->
    <string name="auth_login_hint">Login</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_phone_hint">Phone</string>
    <string name="auth_login_button">Login</string>
    <string name="auth_next_button">Next</string>

    <!-- Профиль -->
    <string name="profile_title">My Profile</string>
    <string name="profile_fullname_hint">Full name</string>
    <string name="profile_center_hint">Center</string>

    <!-- Контент -->
    <string name="content_main_mission">Save Planet</string>
    <string name="content_distance_format">%.2f</string>
    <string name="content_image_save_world_desc">Nature rescue sign</string>

    <!-- Ошибки -->
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_forbidden">Forbidden</string>
    <string name="error_not_found">Resource not found</string>
    <string name="error_client">Request error</string>
    <string name="error_server">Server error</string>
    <string name="error_timeout">Connection timeout</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_network_general">Network error</string>
    <string name="error_network">Network error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="button_countine">Сountine</string>
    <string name="menu_list">Список</string>
    <string name="photo">Photo</string>
    <string name="coordinates_format" translatable="false">%.4f, %.4f</string>
    <string name="error_button">Error</string>

    <string name="common_map">Google map</string>
    <string name="button_register_center">Register in center</string>
    <string name="continue_button">Countine</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_name_hint">Full Name</string>
    <string name="common_logout">Logout</string>

</resources>